# GOIT_python11_web_module_hw

./: README.md  my_select.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 49828e29040a_init.py
src/: models.py
