[tool.poetry]
name = "goit-python11-web-module-hw7"
version = "0.1.0"
description = ""
authors = ["dzvenyslavavovk <dzvinavovk.25@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_python11_web_module_hw7"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
faker = "^18.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
